# ModularPuzzleGameStudio

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  DISTRIBUTION_GUIDE.md  GAME_EXPLANATION.md  GETTING_STARTED.md  INTERVIEW_PREP.md  PROJECT_SUMMARY.md  README.md  create_distribution.bat  download_sfml_2.6.bat  setup.bat  setup.sh
GameStudio_Distribution/: README.txt
GameStudio_Distribution/assets/: README.md
include/ai/: MoveStrategy.hpp  TicTacToeRandomAI.hpp
include/core/: Game.hpp  GameFactory.hpp  GameManager.hpp  Grid.hpp  Screen.hpp  ScreenManager.hpp
include/games/: Puzzle2048Game.hpp  SudokuGame.hpp  TicTacToeGame.hpp
include/observer/: Observer.hpp  Subject.hpp
include/ui/: MainMenuScreen.hpp  NameEntryScreen.hpp  ScoreBoardScreen.hpp  SettingsScreen.hpp  SplashScreen.hpp
include/util/: FileManager.hpp  ScoreBoard.hpp
src/: main.cpp
src/ai/: TicTacToeRandomAI.cpp
src/core/: GameFactory.cpp  GameManager.cpp  ScreenManager.cpp
src/games/: Puzzle2048Game.cpp  SudokuGame.cpp  TicTacToeGame.cpp
src/observer/: Subject.cpp
src/ui/: MainMenuScreen.cpp  NameEntryScreen.cpp  ScoreBoardScreen.cpp  SettingsScreen.cpp  SplashScreen.cpp
src/util/: FileManager.cpp  ScoreBoard.cpp
